<resources>
    <string name="app_name">AriGo</string>
    <string name="biz_bilan_aloqa">Biz bilan aloqa</string>
    <string name="agar_ilova_bilan_ishlashda_muammoga_duch_kelsangiz_bizga_murojaat_qiling">Agar ilova bilan ishlashda muammoga duch kelsangiz, bizga murojaat qiling</string>
    <string name="qo_ng_iroq">Qo\'ng\'iroq</string>
    <string name="chat">Chat</string>
    <string name="telegram">Telegram</string>
    <string name="sizga_yetkazib_beradigan_kuryer_topildi">Sizga yetkazib beradigan kuryer topildi</string>
    <string name="bekor_qilish">Bekor qilish</string>
    <string name="davom_etish">Davom etish</string>
    <string name="platforma_tilini_o_zgartirishni_hohlaysizmi">Platforma tilini o’zgartirishni hohlaysizmi?</string>
    <string name="saqlash">Saqlash</string>
    <string name="akkauntdan_chiqishni_xohlaysizmi">Akkauntdan chiqishni xohlaysizmi?</string>
    <string name="chiqish">Chiqish</string>
    <string name="biz_doimo_yaxshilanishga_intilamiz_va_kelgusi_safar_sizga_yanada_yaxshi_xizmat_ko_rsatamiz_degan_umiddamiz">Biz doimo yaxshilanishga intilamiz va kelgusi safar sizga yanada yaxshi xizmat ko‘rsatamiz degan umiddamiz!</string>
    <string name="buyurtmangiz_bekor_qilinganidan_afsusdamiz">Buyurtmangiz bekor qilinganidan afsusdamiz 😔</string>
    <string name="sizning_buyurtmangiz_bekor_qilindi">Sizning buyurtmangiz bekor qilindi</string>
    <string name="profilingizdagi_ma_lumotni_o_zgartirishda_xatolik_yuz_berdi">Profilingizdagi ma’lumotni o’zgartirishda xatolik yuz berdi</string>
    <string name="profilingizdagi_ma_lumot_o_zgartirildi">Profilingizdagi ma`lumot o’zgartirildi</string>
    <string name="kuryer_topilmadi">Kuryer topilmadi</string>
    <string name="tahrirlash">Tahrirlash</string>
    <string name="tarih">Tarix</string>
    <string name="sizda_hozir_buyurtmalar_mavjud_emas">Sizda hozir buyurtmalar mavjud emas</string>
    <string name="sizning_ro_yhatingiz_bo_sh">Sizning ro\'yhatingiz bo\'sh</string>
    <string name="qidiruv">Qidiruv...</string>
    <string name="dokonlar">Do`konlar</string>
    <string name="hammasi">Hammasi</string>
    <string name="dorihona">Dorixona</string>
    <string name="so_rovnoma">So’rovnoma</string>
    <string name="boshqa_magazinlardan_harid_qilish">Boshqa magazinlardan harid qilish</string>
    <string name="ro_yhat">Ro\'yhat</string>
    <string name="_2_kg_kartoshka_qizil_n3_litr_sut_3_foizlik_n10_ta_tuhum_nextra_kalbasa_yarim_kg">2 kg kartoshka qizil\n3 litr sut 3 foizlik\n10 ta tuhum \nExtra kalbasa yarim kg</string>
    <string name="mahsulotlarni_nomi_va_miqdorini_to_liq_kiriting">Mahsulotlarni nomi va miqdorini to\'liq kiriting</string>
    <string name="buyurtma_qilish">Buyurtma qilish</string>
    <string name="ish_vaqti">Ish vaqti</string>
    <string name="manzil">Manzil</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="market_haqida">Market haqida</string>
    <string name="ko_proq_o_qish">Ko\'proq o\'qish</string>
    <string name="buyurtma">Buyurtma</string>
    <string name="profil">Profil</string>
    <string name="profil_ma_lumoti">Profil ma\'lumoti</string>
    <string name="ismingiz">Ismingiz</string>
    <string name="til_tanlash">Til tanlash</string>
    <string name="biz_bilan_bog_lanish">Biz bilan bog`lanish</string>
    <string name="yoki">yoki</string>
    <string name="buyurtmani_bekor_qilish">Buyurtmani bekor qilish</string>
    <string name="boshqa_sababdan">Boshqa sababdan...</string>
    <string name="xabar_yozing">Xabar yozing...</string>
    <string name="kodni_qayta_yuborish">Kodni qayta yuborish:</string>
    <string name="raqam_o_zgartirish">Raqam o`zgartirish</string>
    <string name="yetkazish_tafsilotlari">Yetkazish tafsilotlari</string>
    <string name="batafsil">Batafsil</string>
    <string name="ari_platformasiga_xush_nkelibsiz">ARi platformasiga xush \nkelibsiz!</string>
    <string name="kerakli_bo_lgan_manzillarni_biz_bilan_toping">Kerakli bo`lgan manzillarni biz bilan toping</string>
    <string name="yuqori_baholangan_joylarni_osongina_toping">Yuqori baholangan joylarni osongina toping</string>
    <string name="manzilingiz_haqida_barcha_ma_lumotlar">Manzilingiz haqida barcha ma\'lumotlar</string>
    <string name="xaritalar_orqali_manzilni_qiyinchiliklarsiz_topish">Xaritalar orqali manzilni qiyinchiliklarsiz topish</string>
    <string name="kirish">Kirish</string>
    <string name="tilni_tanlang">Tilni tanlang</string>
    <string name="tilni_keyinchalik_o_zgartirishingiz_ham_mumkun">Tilni keyinchalik o\'zgartirishingiz ham mumkun</string>
    <string name="magazinlar">Magazinlar</string>
    <string name="lokatsiyalar">Manzillar</string>
    <string name="yangi_lokatsiya_qo_shing">Yangi manzil qo\'shing</string>
    <string name="sizning_manzilingiz">Sizning manzilingiz</string>
    <string name="manzil_nomi">Manzil nomi</string>
    <string name="telefon_raqamingizni_kiriting">Telefon raqamingizni kiriting</string>
    <string name="bosh_sahifa">Bosh sahifa</string>
    <string name="km_masofada_qidirish">km masofada qidirish</string>
    <string name="internet_mavjud_emas_iltimos_tekshirib_ko_ring">Internet mavjud emas, iltimos tekshirib ko\'ring</string>
    <string name="bildirishnomalar">Bildirishnomalar</string>
    <string name="rahmat_buyurtma_yakunlandi">Rahmat! Buyurtma yakunlandi!</string>
    <string name="izoh_qoldiring">Izoh qoldiring</string>
    <string name="o_tkazish">O`tkazish</string>
    <string name="yetkazib_berish_vaqti">Yetkazib berish vaqti</string>
    <string name="qayta_buyutma_berish">Qayta buyutma berish</string>
    <string name="uy_raqami">Uy raqami</string>
    <string name="damofon">Damofon</string>
    <string name="podyezd">Podyezd</string>
    <string name="qavat">Qavat</string>
    <string name="qo_shimcha_xabar">Qo\'shimcha xabar</string>
    <string name="qayerga">Qayerga</string>
    <string name="raqamingiz">Raqamingiz</string>
    <string name="sizga_eng_yaqin_kuryer_nqidirilmoqda">Sizga eng yaqin kuryer \nqidirilmoqda</string>
    <string name="biz_ommaviy_hamkorlik_asosida_ishlaymiz_buyurtma_berganingizda_tizim_sizga_eng_mos_kuryerni_avtomatik_tanlaydi">Biz ommaviy hamkorlik asosida ishlaymiz. Buyurtma berganingizda, tizim sizga eng mos kuryerni avtomatik tanlaydi</string>
    <string name="dokon">Do`kon</string>
    <string name="tez">Tez</string>
    <string name="hint_magazine_order">Masalan: 2 kg kartoshka (qizil), 3 litr sut (3%), 10 dona tuxum, 0.5 kg extra kolbasa. Mahsulot nomi, miqdori va markasini yozing</string>
    <string name="hint_pharmacy_order">Masalan: Paratsetamol 500 mg (kattalar uchun), 10 dona. Dori nomi, dozasi, miqdori va kim uchun (kattalar yoki bolalar) ekanligini yozing</string>
    <string name="yetkazish_manzili">Yetkazish manzili</string>
    <string name="ilovadan_chiqish_uchun_yana_bir_marta_orqaga_tugmasini_bosing">Ilovadan chiqish uchun yana bir marta \'Orqaga\' tugmasini bosing</string>
    <string name="hechnima"> </string>


</resources>