<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBgColor"
    android:fitsSystemWindows="true"
    android:paddingTop="16dp"
    >

    <ImageView
        android:id="@+id/icBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_back"
        app:tint="@color/text_color_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:drawablePadding="6dp"
        android:fontFamily="@font/font_family"
        android:text="Manzil"
        android:textColor="@color/text_color_bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/icBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/icBack" />

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/icBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/location"
        />

    <ImageView
        android:id="@+id/marker"
        android:layout_width="60dp"
        android:layout_height="63dp"
        app:layout_constraintTop_toTopOf="@id/mapView"
        app:layout_constraintBottom_toBottomOf="@id/mapView"
        app:layout_constraintStart_toStartOf="@id/mapView"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        android:src="@drawable/ic_pin"
        />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/back_map_btn"
        app:tint="@color/text_color_bold"
        />

    <ImageView
        android:id="@+id/minus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_minus"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plus"
        android:background="@drawable/back_map_btn"
        app:tint="@color/text_color_bold"
        />

    <ImageView
        android:id="@+id/gps"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_navigation"
        app:layout_constraintTop_toBottomOf="@id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/back_map_btn"
        android:layout_marginTop="12dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="327dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bottom_sheet_dialog"
        >

        <View
            android:id="@+id/view"
            android:layout_width="72dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:drawablePadding="6dp"
            android:fontFamily="@font/font_family"
            android:text="@string/manzil"
            android:textColor="@color/text_color_bold"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />


        <TextView
            android:id="@+id/edtYourLoc"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@id/locationTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edt_bg"
            android:layout_marginHorizontal="24dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/text_color_bold"
            android:textSize="16sp"
            android:hint="@string/sizning_manzilingiz"
            android:paddingStart="15dp"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/ic_map_point"
            android:paddingEnd="10dp"
            />

        <EditText
            android:id="@+id/edtLocName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toBottomOf="@id/edtYourLoc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edt_bg"
            android:layout_marginHorizontal="24dp"
            android:textColor="@color/text_color_bold"
            android:textSize="16sp"
            android:gravity="center_vertical|start"
            android:hint="@string/manzil_nomi"
            android:paddingStart="15dp"
            android:layout_marginTop="16dp"
            android:paddingEnd="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinueLn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/back_style_button"
            android:fontFamily="@font/font_family"
            android:text="@string/saqlash"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/btnTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>