<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor">


    <ImageView
        android:id="@+id/imageList"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_list_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_family_medium"
        android:text="@string/ro_yhat"
        android:textColor="@color/text_color_bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/imageList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageList" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/line"
        app:layout_constraintTop_toBottomOf="@id/listTitle" />

    <EditText
        android:id="@+id/edtOrder"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edt_bg"
        android:gravity="start|top"
        android:hint="@string/_2_kg_kartoshka_qizil_n3_litr_sut_3_foizlik_n10_ta_tuhum_nextra_kalbasa_yarim_kg"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:overScrollMode="always"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="@color/text_color_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <TextView
        android:id="@+id/example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_family_medium"
        android:gravity="start|center_vertical"
        android:text="@string/mahsulotlarni_nomi_va_miqdorini_to_liq_kiriting"
        android:textColor="@color/text_color_bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtOrder" />


    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/line"
        app:layout_constraintTop_toBottomOf="@id/example" />


    <TextView
        android:id="@+id/shopText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_family_medium"
        android:gravity="start|center_vertical"
        android:text="Magazin qo'shish"
        android:textColor="@color/text_color_bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/addShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/back_edt_google"
        app:layout_constraintBottom_toBottomOf="@id/magazine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/magazine"
        app:cardCornerRadius="16dp"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="0dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/shop_add" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/magazine"
        android:layout_width="144dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/addShop"
        app:layout_constraintTop_toBottomOf="@id/shopText"
        app:strokeColor="@android:color/transparent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_style_intro">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/font_family"
                android:gravity="bottom|start"
                android:maxLines="2"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/otherShop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/repeatBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        app:cardBackgroundColor="@color/buttonBgColorFalse"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/magazine"
        app:strokeWidth="0dp">
        >

        <LinearLayout
            android:id="@+id/resend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/repeatText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_order" />

            <TextView
                android:id="@+id/imageRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/font_family"
                android:text="@string/buyurtma_qilish"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>